# ultimate-ttt-2020

./: CMakeLists.txt
runner/: game_state.cpp  game_state.h  game_state_ut.cpp  main.cpp  runner.cpp
strategy/: Strategy.cpp  Strategy.h  strategy_main.cpp
